# Academic-Assistant

./: .dockerignore  .env.example  .env.laptop.example  .env.offline.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  SETUP.md  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  install.bat  pyproject.toml  start.bat  stop.bat
.claude/rules/: aaf-api-contract.mdc  aaf-python-style.mdc  aaf-react-style.mdc
.claude/skills/aaf-agent-workflow/: SKILL.md
.claude/skills/aaf-backend-api/: SKILL.md
.claude/skills/aaf-deploy/: SKILL.md
.claude/skills/aaf-frontend-react/: SKILL.md
.claude/skills/aaf-harness-engineering/: SKILL.md
.claude/skills/aaf-llm-provider/: SKILL.md
.claude/skills/aaf-memory-contract/: SKILL.md
.claude/skills/aaf-project-conventions/: SKILL.md
.claude/skills/aaf-skill-host/: SKILL.md
.claude/skills/aaf-tailwind-shadcn/: SKILL.md
.code-reading/: index.db
.githooks/: pre-commit
.github/workflows/: consistency.yml
backend/: AGENTS.md  app.py  settings.py
backend/agents/: __init__.py  evolver.py  research_agent.py
backend/api/: AGENTS.md
backend/api/routers/: __init__.py  auth.py  documents.py  health.py  heuristics.py  knowledge.py  manuscripts.py  mcp.py  memory.py  models.py  planner.py  proposals.py  settings.py  skills.py  tasks.py  tools.py  workflows.py
backend/core/: __init__.py  app_state.py  budget.py  build_info.py  context_manager.py  errors.py  events.py  pause.py  rule_engine.py  runtime_config.py
backend/core/auth/: __init__.py  dependencies.py  models.py  password.py  tokens.py  users.py
backend/knowledge/: __init__.py  extractor.py  ingest.py
backend/manuscripts/: __init__.py  bundle_storage.py  models.py  sql_store.py  store.py
backend/memory/: AGENTS.md  __init__.py  base.py  chunker.py  document_store.py  episodic_sql.py  episodic_store.py  factory.py  heuristic_store.py  knowledge_store.py  models.py  paper_memory.py  session_redis.py  session_store.py  sql_schema.py  vector_chroma.py  vector_store.py
backend/planner/: AGENTS.md  __init__.py  compiler.py  executor.py  models.py  validator.py
backend/proposals/: AGENTS.md  __init__.py  models.py  store.py
backend/tasks/: __init__.py  models.py  queue.py  runner.py  sql_store.py  store.py
backend/tests/: conftest.py
backend/tools/: __init__.py  arxiv_search.py  base.py  mcp_client.py  mcp_config.py  mcp_loader.py  mcp_tool.py  pdf_parse.py  registry.py
backend/workers/: arq_worker.py
backend/workflows/: AGENTS.md  __init__.py  auto.py  base.py  bundle_adapter.py  citation_guard.py  citation_research.py  consult.py  dag.py  demo.py  peer_review.py  primitives.py  project_consult.py  project_revision.py  registry.py  research.py  revision.py  write.py
config/: mcp_servers.example.yaml  model_routing.example.yaml
data/survey/: research-log.md
deploy/: README.md  backend.Dockerfile  backup.sh  frontend.Dockerfile
deploy/caddy/: Caddyfile.example
deploy/nginx/: frontend.conf
deploy/postgres/: init.sql
docs/: README.md  api-reference.md  architecture.md  laptop-mode.md  runtime-internals.md  runtime-internals.zh.md  writing-your-own-llm-provider.md  writing-your-own-skill.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
mcp-servers/google-scholar/: google_scholar_server.py  google_scholar_web_search.py  requirements.txt
presets/: chat.md
prompts/planner/: research.md
rules/: AGENTS.md  knowledge-protection.md  self-evolution.md
scripts/: analyze_index.py  bootstrap_target.sh  check_consistency.py  code_indexer.py  migrate_writing_skills.py  pack-for-migration.sh  package_for_migration.sh  patch_skill_frontmatter.py
scripts/windows/: install_shortcuts.ps1  restart_backend.cmd  start_aaf.cmd  start_aaf.ps1  stop_aaf.cmd  stop_aaf.ps1
sdk/python/: README.md  pyproject.toml
sdk/python/aaf/: __init__.py  _version.py  auth.py  client.py  documents.py  exceptions.py  manuscripts.py  memory.py  models.py  planner.py  proposals.py  skills.py  tasks.py  tools.py  workflows.py
sdk/python/examples/: run_research.py  stream_task.py
sdk/python/tests/: test_smoke.py
skills/: AGENTS.md
skills/autoresearch/: SKILL.md
skills/brainstorming/: SKILL.md
skills/brainstorming-research/: SKILL.md
skills/creative-thinking/: SKILL.md
skills/download-paper/: SKILL.md
skills/evidence-driven-writing/: SKILL.md
skills/experiment-results-planning/: SKILL.md
skills/literature-search/: SKILL.md
skills/paper-orchestration/: SKILL.md
skills/paper-presentation/: SKILL.md
skills/paper-reading/: SKILL.md
skills/paper-revision/: IMPLEMENTATION_CHECKLIST.md  README.md  SKILL.md  example_revision_guidance.md  llm_revision_analyzer.py  paper_revision_impl.py  test_integration.py
skills/paper-writing/: SKILL.md
skills/peer-review/: SKILL.md
skills/pptx/: SKILL.md
skills/presentation-maker/: SKILL.md
skills/prompts-collection/: SKILL.md
skills/rebuttal-writer/: SKILL.md  example_rebuttal.md  llm_rebuttal_analyzer.py  rebuttal_writer_impl.py  test_integration.py
skills/skill-creator/: SKILL.md
skills/survey-table/: SKILL.md
skills/survey-writing/: SKILL.md
skills/verification/: SKILL.md
skills/writing-chapters/: SKILL.md
skills/writing-core/: SKILL.md
(+244 files in other folders)
