[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aaf-sdk"
version = "0.1.0"
description = "Python client for the Academic Agent Framework (AAF) HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AAF Contributors" }]
keywords = ["aaf", "academic", "agent", "llm", "client", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/aaf/academic-agent-framework"
Documentation = "https://github.com/aaf/academic-agent-framework/tree/main/docs"
Source = "https://github.com/aaf/academic-agent-framework/tree/main/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["aaf"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
packages = ["aaf"]
